# DeepRAG

./: .docker.env.example  .gitignore  75244c4e-2973-4a24-afcc-551bad1ecdca_graph_with_leiden.html  Dockerfile  README.md  deeprag.tar  docker-compose.yml  entrypoint.sh  pyproject.toml
deeprag/: pyproject.toml
deeprag/src/deeprag/: .env.example  core.py  deeprag.py  draft.py  samples.py
deeprag/src/deeprag/api/: data_model.py  main.py
deeprag/src/deeprag/cached_intermediate_results/: __init__.py
deeprag/src/deeprag/db/: deeprag_finalize.py
deeprag/src/deeprag/knowledge_file/: deepseek.txt  test.csv
deeprag/src/deeprag/workflow/: batch_generate_community_cluster.py  batch_generate_community_report.py  batch_text_chunk_generate_embeddings.py  batch_text_chunk_generate_graphs.py  data_model.py  (+11 more)
deeprag/tests/: compute_tokens.py  draft.py  test1.py  test_async_tasks.py  test_chunk.py  test_embedding.py  test_workflow.py
deeprag/tests/2025-04-22_test/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.ipynb
deeprag/tests/2025_02_14_test/: test1.py  test_pyvis.py
deeprag/tests/2025_02_20_test/: test_leiden.py
deeprag/tests/2025_02_26_test/: api_request.py  test_prisma_database.py
deeprag/tests/2025_02_28_test/: test.py
deeprag/tests/2025_03_03_test/: test.py  test2.py
deeprag/tests/2025_03_06_test/: draft.py
deeprag/tests/2025_03_11_test/: draft2.py  test_pydantic.py  test_pydantic_v2.py  test_pydantic_v3.py
deeprag/tests/2025_04_01_test/: draft.py  draft2.py  draft4.py  draft5.py  test_sub_graph_data.py
(+209 files in other folders)
